# PhoneMike

./: .gitignore  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/phonemike/app/: MainActivity.kt  PhoneMikeApp.kt
app/src/main/java/com/phonemike/app/audio/: AudioCaptureEngine.kt  OpusEncoder.kt
app/src/main/java/com/phonemike/app/service/: AudioService.kt
app/src/main/java/com/phonemike/app/tcp/: TcpAudioServer.kt
app/src/main/java/com/phonemike/app/ui/: MainScreen.kt  MainViewModel.kt
app/src/main/java/com/phonemike/app/ui/theme/: Color.kt  Theme.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
assets/: LOGO_GUIDE.md
driver/: build.ps1  install-user.ps1  install.ps1  phonemic.inf  phonemic_driver.vcxproj  rebuild.ps1
driver/src/: dma_channel.cpp  driver.h  driver_entry.cpp  guids.cpp  miniport.cpp  shared_mem.cpp  shared_mem.h  stream.cpp  topology.cpp
gradle/: libs.versions.toml
installer/: phonemic-setup.iss
pc-client/: Cargo.toml  PhoneMike.rc  build.rs
pc-client/src/: app.rs  audio_thread.rs  main.rs  shared_mem.rs  state.rs  tcp.rs  tray.rs  ui.rs  update.rs  wav.rs
